[project]
name = "punch-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.1",
    "chromedriver-autoinstaller>=0.6.4",
    "loguru>=0.7.2",
    "lxml>=5.2.1",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.1",
    "selenium>=4.1.0",
]
